--- a/contact.html
+++ b/contact.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage - DAS Properties</title>
-      <meta name="description" content="">
-  <meta name="keywords" content="">
+    <title>Contact DAS Property – Talk to Our Team Today</title>
+      <meta name="description" content="Have questions about global property investment? Get in touch with DAS Properties today.">
+  <meta name="keywords" content="contact DAS Group, property inquiries, talk to us, real estate help, UK property inquiries, Thailand property inquiries, Asia property inquiries">
    <!-- Favicons -->
- <link rel="shortcut icon" href="assets/Logo wbg.JPG" type="image/x-icon">
+ <link rel="shortcut icon" href="assets/Logo_w.png" type="image/x-icon">
+ <link rel="apple-touch-icon" href="assets/Logo_w.png">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
@@ -121,7 +122,7 @@
 
 
 <div class="agent-form">
-<form id="interest-form" action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+<form id="interest-form" action="https://formspree.io/f/xblyrrzp" method="POST">
     <h3 id="sign">Sign Up Today</h3>
 
 <p id="sign-up">Ready to start earning? Simply fill out the registration form below to join our Agent Referral Program and get started today!</p>
