--- a/global-opportunities.html
+++ b/global-opportunities.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage - DAS Properties</title>
-      <meta name="description" content="">
-  <meta name="keywords" content="">
+    <title>Global Opportunities | DAS Properties</title>
+
+      <meta name="description" content="Explore profitable real estate deals across London, Manchester, Thailand, and more. Hand-picked investments by DAS Group.">
+
+  <meta name="keywords" content="global property deals, real estate opportunities, UK investment, Thailand properties, property abroad">
    <!-- Favicons -->
- <link rel="shortcut icon" href="assets/Logo wbg.JPG" type="image/x-icon">
+ <link rel="shortcut icon" href="assets/Logo_w.png" type="image/x-icon">
+ <link rel="apple-touch-icon" href="assets/Logo_w.png">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
@@ -67,8 +70,7 @@
 
 <section class="properties-hero">
     <div>
-<h1>
-Global Opportunities</h1>
+<h1>Global Opportunities</h1>
 </div>
 </section>
 
