--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage - DAS Properties</title>
-      <meta name="description" content="">
-  <meta name="keywords" content="">
+    <title>"DAS Properties | Homepage</title>
+
+  <meta name="description" content="Invest in premium real estate across the UK and Asia with DAS Group. Explore properties in London, Manchester, Thailand, and more.">
+
+  <meta name="keywords" content="DAS Properties, real estate investment, UK property, London property, Manchester real estate, Thailand property, global real estate, high yield investment, property, properties, buy property overseas">
+
    <!-- Favicons -->
- <link rel="shortcut icon" href="assets/Logo wbg.JPG" type="image/x-icon">
+ <link rel="shortcut icon" href="assets/Logo_w.png" type="image/x-icon">
+
+ <link rel="apple-touch-icon" href="assets/Logo_w.png">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
