--- a/investment-opportunities.html
+++ b/investment-opportunities.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage - DAS Properties</title>
-      <meta name="description" content="">
-  <meta name="keywords" content="">
+    <title>Investment Opportunities - DAS Properties</title>
+      <meta name="description" content="Browse investment-ready properties handpicked by DAS Properties – across the UK, Asia, and beyond.">
+  <meta name="keywords" content="investment opportunities, global property deals, DAS Properties portfolio">
    <!-- Favicons -->
- <link rel="shortcut icon" href="assets/Logo wbg.JPG" type="image/x-icon">
+ <link rel="shortcut icon" href="assets/Logo_w.png" type="image/x-icon">
+
+ <link rel="apple-touch-icon" href="assets/Logo_w.png">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
