--- a/london-woolwich.html
+++ b/london-woolwich.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage - DAS Properties</title>
-      <meta name="description" content="">
-  <meta name="keywords" content="">
+    <title>Woolwich, London - DAS Properties</title>
+    
+      <meta name="description" content="Invest in Woolwich, London – a high-demand location with strong rental yields. Learn more about this premium opportunity.">
+
+  <meta name="keywords" content="Woolwich property, London real estate, UK property investment, DAS Group listings, Woolwich homes for sale">
    <!-- Favicons -->
- <link rel="shortcut icon" href="assets/Logo wbg.JPG" type="image/x-icon">
+ <link rel="shortcut icon" href="assets/Logo_w.png" type="image/x-icon">
+
+  <link rel="apple-touch-icon" href="assets/Logo_w.png">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
