--- a/manchester-kingfisher.html
+++ b/manchester-kingfisher.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage - DAS Properties</title>
-      <meta name="description" content="">
-  <meta name="keywords" content="">
+    <title>Kingfisher, Manchester - DAS Properties</title>
+      <meta name="description" content="Kingfisher in Manchester offers solid rental yields and growing demand in one of UK’s fastest-growing cities.">
+  <meta name="keywords" content="Kingfisher Manchester, UK rental property, Manchester investments, DAS Properties">
    <!-- Favicons -->
- <link rel="shortcut icon" href="assets/Logo wbg.JPG" type="image/x-icon">
+ <link rel="shortcut icon" href="assets/Logo_w.png" type="image/x-icon">
+ 
+
+ <link rel="apple-touch-icon" href="assets/Logo_w.png">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
