--- a/about-us.html
+++ b/about-us.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - DAS Properties</title>
-      <meta name="description" content="">
-  <meta name="keywords" content="">
+    <title>About | DAS Properties</title>
+      <meta name="description" content="Learn about DAS Group, a trusted partner in global real estate investment. Our team is committed to your success.">
+  <meta name="keywords" content="About DAS Properties, property experts, real estate team, global property company, global property advisors, investment team, property consultants">
    <!-- Favicons -->
- <link rel="shortcut icon" href="assets/Logo wbg.JPG" type="image/x-icon">
+ <link rel="shortcut icon" href="assets/Logo_w.png" type="image/x-icon">
+ <link rel="apple-touch-icon" href="assets/Logo_w.png">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
