--- a/birmingham-scholars.html
+++ b/birmingham-scholars.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage - DAS Properties</title>
-      <meta name="description" content="">
-  <meta name="keywords" content="">
+    <title>Scholars Court, Birmingham | DAS Properties</title>
+      <meta name="description" content="Scholar’s Quarter is a UK investment property opportunity offering high rental demand and solid returns.">
+  <meta name="keywords" content="Birmingham Scholars Court, UK property, student housing, DAS Properties investments">
    <!-- Favicons -->
- <link rel="shortcut icon" href="assets/Logo wbg.JPG" type="image/x-icon">
+ <link rel="shortcut icon" href="assets/Logo_w.png" type="image/x-icon">
+ <link rel="apple-touch-icon" href="assets/Logo_w.png">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
