--- a/birmingham-sloane.html
+++ b/birmingham-sloane.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage - DAS Properties</title>
-      <meta name="description" content="">
-  <meta name="keywords" content="">
+    <title>Sloane Birmingham - DAS Properties</title>
+      <meta name="description" content="Invest in Sloane Birmingham – a premium city-center property offering strong capital growth and steady yields.">
+  <meta name="keywords" content="Sloane Birmingham, UK property, Birmingham investments, DAS Properties real estate, Birmingham property">
    <!-- Favicons -->
- <link rel="shortcut icon" href="assets/Logo wbg.JPG" type="image/x-icon">
+ <link rel="shortcut icon" href="assets/Logo_w.png" type="image/x-icon">
+ 
+ <link rel="apple-touch-icon" href="assets/Logo_w.png">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
