--- a/london-goldfinch.html
+++ b/london-goldfinch.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage - DAS Properties</title>
-      <meta name="description" content="">
-  <meta name="keywords" content="">
+    <title>Goldfinch Apartments, London - DAS Properties</title>
+      <meta name="description" content="Invest in Goldfinch – a contemporary apartment block ideal for short and long-term lets in London.">
+  <meta name="keywords" content="Goldfinch London, UK apartments, real estate investments, DAS Properties">
    <!-- Favicons -->
- <link rel="shortcut icon" href="assets/Logo wbg.JPG" type="image/x-icon">
+ <link rel="shortcut icon" href="assets/Logo_w.png" type="image/x-icon">
+
+ <link rel="apple-touch-icon" href="assets/Logo_w.png">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
