--- a/rental-management.html
+++ b/rental-management.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage - DAS Properties</title>
-      <meta name="description" content="">
-  <meta name="keywords" content="">
+    <title>Rental Management - DAS Properties</title>
+      <meta name="description" content="Let DAS Properties handle your rental property – from tenant sourcing to rent collection.">
+  <meta name="keywords" content="rental management, property letting, DAS Group landlord service">
    <!-- Favicons -->
- <link rel="shortcut icon" href="assets/Logo wbg.JPG" type="image/x-icon">
+ <link rel="shortcut icon" href="assets/Logo_w.png" type="image/x-icon">
+
+ <link rel="apple-touch-icon" href="assets/Logo_w.png">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
