--- a/thailand-jomtien.html
+++ b/thailand-jomtien.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage - DAS Properties</title>
-      <meta name="description" content="">
-  <meta name="keywords" content="">
+    <title>Jomtien, Pattaya - DAS Properties</title>
+      <meta name="description" content="Jomtien offers budget-friendly Thai property investments near the coast with strong tourist appeal.">
+  <meta name="keywords" content="Jomtien Pattaya property, Thailand investment, DAS Properties real estate">
    <!-- Favicons -->
- <link rel="shortcut icon" href="assets/Logo wbg.JPG" type="image/x-icon">
+ <link rel="shortcut icon" href="assets/Logo_w.png" type="image/x-icon">
+
+ <link rel="apple-touch-icon" href="assets/Logo_w.png">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
