--- a/birmingham-scholars.html
+++ b/birmingham-scholars.html
@@ -7,8 +7,8 @@
       <meta name="description" content="Scholar’s Quarter is a UK investment property opportunity offering high rental demand and solid returns.">
   <meta name="keywords" content="Birmingham Scholars Court, UK property, student housing, DAS Properties investments">
    <!-- Favicons -->
- <link rel="shortcut icon" href="assets/Logo_w.png" type="image/x-icon">
- <link rel="apple-touch-icon" href="assets/Logo_w.png">
+ <link rel="shortcut icon" href="assets/Logo_p.png" type="image/x-icon">
+ <link rel="apple-touch-icon" href="assets/Logo_p.png">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
