--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,8 @@
       <meta name="description" content="Have questions about global property investment? Get in touch with DAS Properties today.">
   <meta name="keywords" content="contact DAS Group, property inquiries, talk to us, real estate help, UK property inquiries, Thailand property inquiries, Asia property inquiries">
    <!-- Favicons -->
- <link rel="shortcut icon" href="assets/Logo_w.png" type="image/x-icon">
- <link rel="apple-touch-icon" href="assets/Logo_w.png">
+ <link rel="shortcut icon" href="assets/Logo_p.png" type="image/x-icon">
+ <link rel="apple-touch-icon" href="assets/Logo_p.png">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
