--- a/global-opportunities.html
+++ b/global-opportunities.html
@@ -9,8 +9,8 @@
 
   <meta name="keywords" content="global property deals, real estate opportunities, UK investment, Thailand properties, property abroad">
    <!-- Favicons -->
- <link rel="shortcut icon" href="assets/Logo_w.png" type="image/x-icon">
- <link rel="apple-touch-icon" href="assets/Logo_w.png">
+ <link rel="shortcut icon" href="assets/Logo_p.png" type="image/x-icon">
+ <link rel="apple-touch-icon" href="assets/Logo_p.png">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
