--- a/how-it-works.html
+++ b/how-it-works.html
@@ -7,9 +7,9 @@
       <meta name="description" content="Understand the DAS Properties process – from sourcing and due diligence to purchase and returns.">
   <meta name="keywords" content="investment process, how it works, DAS Properties buying guide, property steps,">
    <!-- Favicons -->
- <link rel="shortcut icon" href="assets/Logo_w.png" type="image/x-icon">
+ <link rel="shortcut icon" href="assets/Logo_p.png" type="image/x-icon">
 
- <link rel="apple-touch-icon" href="assets/Logo_w.png">
+ <link rel="apple-touch-icon" href="assets/Logo_p.png">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
