--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <meta name="keywords" content="DAS Properties, real estate investment, UK property, London property, Manchester real estate, Thailand property, global real estate, high yield investment, property, properties, buy property overseas">
 
    <!-- Favicons -->
- <link rel="shortcut icon" href="assets/Logo_w.png" type="image/x-icon">
+ <link rel="shortcut icon" href="assets/Logo_p.png" type="image/x-icon">
 
- <link rel="apple-touch-icon" href="assets/Logo_w.png">
+ <link rel="apple-touch-icon" href="assets/Logo_p.png">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
