--- a/london-fairfield.html
+++ b/london-fairfield.html
@@ -7,9 +7,9 @@
       <meta name="description" content="Explore Fairfield Lodge – great value in London with promising long-term rental returns.">
   <meta name="keywords" content="Fairfield London, budget property UK, London investments, DAS Properties">
    <!-- Favicons -->
- <link rel="shortcut icon" href="assets/Logo_w.png" type="image/x-icon">
+ <link rel="shortcut icon" href="assets/Logo_p.png" type="image/x-icon">
 
-  <link rel="apple-touch-icon" href="assets/Logo_w.png">
+  <link rel="apple-touch-icon" href="assets/Logo_p.png">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
