--- a/manchester-kingfisher.html
+++ b/manchester-kingfisher.html
@@ -7,10 +7,10 @@
       <meta name="description" content="Kingfisher in Manchester offers solid rental yields and growing demand in one of UK’s fastest-growing cities.">
   <meta name="keywords" content="Kingfisher Manchester, UK rental property, Manchester investments, DAS Properties">
    <!-- Favicons -->
- <link rel="shortcut icon" href="assets/Logo_w.png" type="image/x-icon">
+ <link rel="shortcut icon" href="assets/Logo_p.png" type="image/x-icon">
  
 
- <link rel="apple-touch-icon" href="assets/Logo_w.png">
+ <link rel="apple-touch-icon" href="assets/Logo_p.png">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
