--- a/south-goldstone.html
+++ b/south-goldstone.html
@@ -7,9 +7,9 @@
       <meta name="description" content="Goldstone combines serene living with profitable investment returns in Southern England.">
   <meta name="keywords" content="Goldstone property, South UK real estate, DAS Properties investments">
    <!-- Favicons -->
- <link rel="shortcut icon" href="assets/Logo_w.png" type="image/x-icon">
+ <link rel="shortcut icon" href="assets/Logo_p.png" type="image/x-icon">
 
- <link rel="apple-touch-icon" href="assets/Logo_w.png">
+ <link rel="apple-touch-icon" href="assets/Logo_p.png">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
