--- a/south-triangle.html
+++ b/south-triangle.html
@@ -7,9 +7,9 @@
       <meta name="description" content="Triangle in the South offers unique architecture and growing investment returns.">
   <meta name="keywords" content="Triangle property UK, DAS Properties South England, investment opportunity">
    <!-- Favicons -->
- <link rel="shortcut icon" href="assets/Logo_w.png" type="image/x-icon">
+ <link rel="shortcut icon" href="assets/Logo_p.png" type="image/x-icon">
 
- <link rel="apple-touch-icon" href="assets/Logo_w.png">
+ <link rel="apple-touch-icon" href="assets/Logo_p.png">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
