--- a/birmingham-sloane.html
+++ b/birmingham-sloane.html
@@ -7,9 +7,9 @@
       <meta name="description" content="Invest in Sloane Birmingham – a premium city-center property offering strong capital growth and steady yields.">
   <meta name="keywords" content="Sloane Birmingham, UK property, Birmingham investments, DAS Properties real estate, Birmingham property">
    <!-- Favicons -->
- <link rel="shortcut icon" href="assets/Logo_w.png" type="image/x-icon">
+ <link rel="shortcut icon" href="assets/Logo_p.png" type="image/x-icon">
  
- <link rel="apple-touch-icon" href="assets/Logo_w.png">
+ <link rel="apple-touch-icon" href="assets/Logo_p.png">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
