--- a/consultancy.html
+++ b/consultancy.html
@@ -7,9 +7,9 @@
       <meta name="description" content="DAS Properties provides tailored consultancy services to help you make the right global property investment decisions.">
   <meta name="keywords" content="real estate consultancy, property advice, DAS Properties consultants">
    <!-- Favicons -->
- <link rel="shortcut icon" href="assets/Logo_w.png" type="image/x-icon">
+ <link rel="shortcut icon" href="assets/Logo_p.png" type="image/x-icon">
 
- <link rel="apple-touch-icon" href="assets/Logo_w.png">
+ <link rel="apple-touch-icon" href="assets/Logo_p.png">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
