--- a/east-sudbury.html
+++ b/east-sudbury.html
@@ -7,8 +7,8 @@
       <meta name="description" content="Explore property opportunities in Sudbury – a peaceful yet high-potential town in East Anglia.">
   <meta name="keywords" content="Sudbury property, East Anglia real estate, UK property deals, DAS Properties">
    <!-- Favicons -->
- <link rel="shortcut icon" href="assets/Logo_w.png" type="image/x-icon">
- <link rel="apple-touch-icon" href="assets/Logo_w.png">
+ <link rel="shortcut icon" href="assets/Logo_p.png" type="image/x-icon">
+ <link rel="apple-touch-icon" href="assets/Logo_p.png">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
