--- a/investment-opportunities.html
+++ b/investment-opportunities.html
@@ -7,9 +7,9 @@
       <meta name="description" content="Browse investment-ready properties handpicked by DAS Properties – across the UK, Asia, and beyond.">
   <meta name="keywords" content="investment opportunities, global property deals, DAS Properties portfolio">
    <!-- Favicons -->
- <link rel="shortcut icon" href="assets/Logo_w.png" type="image/x-icon">
+ <link rel="shortcut icon" href="assets/Logo_p.png" type="image/x-icon">
 
- <link rel="apple-touch-icon" href="assets/Logo_w.png">
+ <link rel="apple-touch-icon" href="assets/Logo_p.png">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
