--- a/london-aspen.html
+++ b/london-aspen.html
@@ -7,9 +7,9 @@
       <meta name="description" content="Secure a unit in Aspen, London – luxury living with excellent investment returns and market prestige.">
   <meta name="keywords" content="Aspen London, London luxury property, UK investments, DAS Properties">
    <!-- Favicons -->
- <link rel="shortcut icon" href="assets/Logo_w.png" type="image/x-icon">
+ <link rel="shortcut icon" href="assets/Logo_p.png" type="image/x-icon">
 
- <link rel="apple-touch-icon" href="assets/Logo_w.png">
+ <link rel="apple-touch-icon" href="assets/Logo_p.png">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
