--- a/london-bookbinder.html
+++ b/london-bookbinder.html
@@ -7,9 +7,9 @@
       <meta name="description" content="Bookbinder Point offers stylish living and strong rental yields in a booming West London area.">
   <meta name="keywords" content="Bookbinder London, London investments, UK apartments, DAS properties">
    <!-- Favicons -->
- <link rel="shortcut icon" href="assets/Logo_w.png" type="image/x-icon">
+ <link rel="shortcut icon" href="assets/Logo_p.png" type="image/x-icon">
 
- <link rel="apple-touch-icon" href="assets/Logo_w.png">
+ <link rel="apple-touch-icon" href="assets/Logo_p.png">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
