--- a/london-goldfinch.html
+++ b/london-goldfinch.html
@@ -7,9 +7,9 @@
       <meta name="description" content="Invest in Goldfinch – a contemporary apartment block ideal for short and long-term lets in London.">
   <meta name="keywords" content="Goldfinch London, UK apartments, real estate investments, DAS Properties">
    <!-- Favicons -->
- <link rel="shortcut icon" href="assets/Logo_w.png" type="image/x-icon">
+ <link rel="shortcut icon" href="assets/Logo_p.png" type="image/x-icon">
 
- <link rel="apple-touch-icon" href="assets/Logo_w.png">
+ <link rel="apple-touch-icon" href="assets/Logo_p.png">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
