--- a/manchester-crown.html
+++ b/manchester-crown.html
@@ -7,9 +7,9 @@
       <meta name="description" content="Crown Manchester offers location advantage, tenant demand, and lucrative rental yields.">
   <meta name="keywords" content="Crown Manchester, Manchester property, UK investments, DAS Properties">
    <!-- Favicons -->
- <link rel="shortcut icon" href="assets/Logo_w.png" type="image/x-icon">
+ <link rel="shortcut icon" href="assets/Logo_p.png" type="image/x-icon">
 
- <link rel="apple-touch-icon" href="assets/Logo_w.png">
+ <link rel="apple-touch-icon" href="assets/Logo_p.png">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
