--- a/new-manchester.html
+++ b/new-manchester.html
@@ -7,9 +7,9 @@
       <meta name="description" content="Invest early in New Manchester – a brand-new development with strong appreciation potential.">
   <meta name="keywords" content="New Manchester property, DAS Properties projects, UK property investment">
    <!-- Favicons -->
- <link rel="shortcut icon" href="assets/Logo_w.png" type="image/x-icon">
+ <link rel="shortcut icon" href="assets/Logo_p.png" type="image/x-icon">
 
- <link rel="apple-touch-icon" href="assets/Logo_w.png">
+ <link rel="apple-touch-icon" href="assets/Logo_p.png">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
