--- a/sales&exit-strategy.html
+++ b/sales&exit-strategy.html
@@ -7,9 +7,9 @@
       <meta name="description" content="We help you plan and execute the perfect exit strategy to cash out at the right time.">
   <meta name="keywords" content="exit strategy, property sales, DAS Properties investment returns">
    <!-- Favicons -->
- <link rel="shortcut icon" href="assets/Logo_w.png" type="image/x-icon">
+ <link rel="shortcut icon" href="assets/Logo_p.png" type="image/x-icon">
  
- <link rel="apple-touch-icon" href="assets/Logo_w.png">
+ <link rel="apple-touch-icon" href="assets/Logo_p.png">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
