--- a/thailand-jomtien.html
+++ b/thailand-jomtien.html
@@ -7,9 +7,9 @@
       <meta name="description" content="Jomtien offers budget-friendly Thai property investments near the coast with strong tourist appeal.">
   <meta name="keywords" content="Jomtien Pattaya property, Thailand investment, DAS Properties real estate">
    <!-- Favicons -->
- <link rel="shortcut icon" href="assets/Logo_w.png" type="image/x-icon">
+ <link rel="shortcut icon" href="assets/Logo_p.png" type="image/x-icon">
 
- <link rel="apple-touch-icon" href="assets/Logo_w.png">
+ <link rel="apple-touch-icon" href="assets/Logo_p.png">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
