--- a/global-opportunities.html
+++ b/global-opportunities.html
@@ -19,7 +19,7 @@
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Mukta:wght@200;300;400;500;600;700;800&family=Abel:wght@400&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
    
@@ -606,6 +606,6 @@ please complete the form, and a member of our team will contact you to assist yo
 </footer>
 
 
-<script src="script.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
