--- a/contact.html
+++ b/contact.html
@@ -171,7 +171,7 @@ please complete the form, and a member of our team will contact you to assist yo
 </a></h3>
 </div>
 
- <form id="interest-form" action="https://formspree.io/f/your-id" method="POST" novalidate target="_blank">
+<form id="interest-form" action="https://formspree.io/f/xjkrlwqa" method="POST" novalidate target="_blank">
     <h2>Interest Form</h2>
 
     <fieldset>
@@ -215,10 +215,10 @@ please complete the form, and a member of our team will contact you to assist yo
     </fieldset>
 
     <!-- Toggle Button for Investment Preferences -->
-    <button type="button" id="toggle-investment-btn" aria-expanded="false" aria-controls="collapsible-section">
-      Investment Preferences
-      <span class="arrow"></span>
-    </button>
+   <button type="button" id="toggle-investment-btn" aria-expanded="false" aria-controls="collapsible-section">
+  <span class="toggle-text">Show More</span>
+ &#9660
+</button>
 
     <!-- Collapsible wrapper for Investment Preferences and below -->
     <div id="collapsible-section" aria-hidden="true">
@@ -268,7 +268,7 @@ please complete the form, and a member of our team will contact you to assist yo
         </div>
 
         <div class="form-group">
-          <label for="time">Preferred Time (with time zone)</label>
+          <label for="time">Preferred Time</label>
           <input type="text" name="consultation_time" id="time" required />
         </div>
 
@@ -277,13 +277,16 @@ please complete the form, and a member of our team will contact you to assist yo
           <textarea name="notes" id="notes" rows="4"></textarea>
         </div>
       </fieldset>
-    </div>
 
-    <div class="form-group checkbox-group" data-group>
+
+      <div class="form-group checkbox-group" data-group>
       <label>
         <input type="checkbox" name="consent" required />
-        I agree to the processing of my personal data in line with the Privacy Policy.
+        I agree to the processing of my personal data in line with the <span class="privacy-styling"><a href="privacy.html">Privacy Policy</a></span>.
       </label>
+    </div>
+    
+
     </div>
 
     <button type="submit" id="submitBtn" disabled>Submit Request</button>
