--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@ please complete the form, and a member of our team will contact you to assist yo
 </a></h3>
 </div>
 
- <form id="interest-form" action="https://formspree.io/f/xblyrrzp" method="POST" novalidate target="_blank">
+ <form id="interest-form" action="https://formspree.io/f/xjkrlwqa" method="POST" novalidate target="_blank">
     <h2>Interest Form</h2>
 
     <fieldset>
@@ -523,10 +523,10 @@ please complete the form, and a member of our team will contact you to assist yo
     </fieldset>
 
     <!-- Toggle Button for Investment Preferences -->
-    <button type="button" id="toggle-investment-btn" aria-expanded="false" aria-controls="collapsible-section">
-      Investment Preferences
-      <span class="arrow"></span>
-    </button>
+   <button type="button" id="toggle-investment-btn" aria-expanded="false" aria-controls="collapsible-section">
+  <span class="toggle-text">Show More</span>
+ &#9660
+</button>
 
     <!-- Collapsible wrapper for Investment Preferences and below -->
     <div id="collapsible-section" aria-hidden="true">
@@ -576,7 +576,7 @@ please complete the form, and a member of our team will contact you to assist yo
         </div>
 
         <div class="form-group">
-          <label for="time">Preferred Time (with time zone)</label>
+          <label for="time">Preferred Time</label>
           <input type="text" name="consultation_time" id="time" required />
         </div>
 
