--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@ please complete the form, and a member of our team will contact you to assist yo
     <!-- Toggle Button for Investment Preferences -->
    <button type="button" id="toggle-investment-btn" aria-expanded="false" aria-controls="collapsible-section">
   <span class="toggle-text">Show More</span>
- &#9660
+ <div class="toggle-arrow">&#9660</div>
 </button>
 
     <!-- Collapsible wrapper for Investment Preferences and below -->
@@ -576,7 +576,7 @@ please complete the form, and a member of our team will contact you to assist yo
         </div>
 
         <div class="form-group">
-          <label for="time">Preferred Time</label>
+          <label for="time">Preferred Time (with time zone)</label>
           <input type="text" name="consultation_time" id="time" required />
         </div>
 
@@ -600,8 +600,6 @@ please complete the form, and a member of our team will contact you to assist yo
     <button type="submit" id="submitBtn" disabled>Submit Request</button>
   </form>
 </section>
-
-
 
   <!-- Contant end -->
    <!-- Footer start -->
