--- a/london-bookbinder.html
+++ b/london-bookbinder.html
@@ -137,7 +137,7 @@ Bookbinder Point</h1>
     <span>Bookbinder Point, Acton, London</span>
   </div>
 
-<a class="interest-btn" href="london-aspen.html#interest">REGISTER YOUR INTEREST TODAY</a>
+<a class="interest-btn" href="london-bookbinder.html#interest">REGISTER YOUR INTEREST TODAY</a>
   
 </div>
 
@@ -307,7 +307,7 @@ please complete the form, and a member of our team will contact you to assist yo
 </a></h3>
 </div>
 
- <form id="interest-form" action="https://formspree.io/f/xjkrlwqa" method="POST" novalidate target="_blank">
+<form id="interest-form" action="https://formspree.io/f/xjkrlwqa" method="POST" novalidate target="_blank">
     <h2>Interest Form</h2>
 
     <fieldset>
@@ -353,7 +353,7 @@ please complete the form, and a member of our team will contact you to assist yo
     <!-- Toggle Button for Investment Preferences -->
    <button type="button" id="toggle-investment-btn" aria-expanded="false" aria-controls="collapsible-section">
   <span class="toggle-text">Show More</span>
- &#9660
+ <div class="toggle-arrow">&#9660</div>
 </button>
 
     <!-- Collapsible wrapper for Investment Preferences and below -->
@@ -404,7 +404,7 @@ please complete the form, and a member of our team will contact you to assist yo
         </div>
 
         <div class="form-group">
-          <label for="time">Preferred Time</label>
+          <label for="time">Preferred Time (with time zone)</label>
           <input type="text" name="consultation_time" id="time" required />
         </div>
 
