--- a/contact.html
+++ b/contact.html
@@ -122,7 +122,7 @@
 
 
 <div class="agent-form">
-<form id="interest-form" action="https://formspree.io/f/xblyrrzp" method="POST">
+<form id="interest-form" action="https://formspree.io/f/xjkrlwqa" method="POST">
     <h3 id="sign">Sign Up Today</h3>
 
 <p id="sign-up">Ready to start earning? Simply fill out the registration form below to join our Agent Referral Program and get started today!</p>
@@ -217,7 +217,7 @@ please complete the form, and a member of our team will contact you to assist yo
     <!-- Toggle Button for Investment Preferences -->
    <button type="button" id="toggle-investment-btn" aria-expanded="false" aria-controls="collapsible-section">
   <span class="toggle-text">Show More</span>
- &#9660
+ <div class="toggle-arrow">&#9660</div>
 </button>
 
     <!-- Collapsible wrapper for Investment Preferences and below -->
@@ -268,7 +268,7 @@ please complete the form, and a member of our team will contact you to assist yo
         </div>
 
         <div class="form-group">
-          <label for="time">Preferred Time</label>
+          <label for="time">Preferred Time (with time zone)</label>
           <input type="text" name="consultation_time" id="time" required />
         </div>
 
