--- a/how-it-works.html
+++ b/how-it-works.html
@@ -195,7 +195,7 @@ please complete the form, and a member of our team will contact you to assist yo
     <!-- Toggle Button for Investment Preferences -->
    <button type="button" id="toggle-investment-btn" aria-expanded="false" aria-controls="collapsible-section">
   <span class="toggle-text">Show More</span>
- &#9660
+ <div class="toggle-arrow">&#9660</div>
 </button>
 
     <!-- Collapsible wrapper for Investment Preferences and below -->
@@ -246,7 +246,7 @@ please complete the form, and a member of our team will contact you to assist yo
         </div>
 
         <div class="form-group">
-          <label for="time">Preferred Time</label>
+          <label for="time">Preferred Time (with time zone)</label>
           <input type="text" name="consultation_time" id="time" required />
         </div>
 
