--- a/manchester-crown.html
+++ b/manchester-crown.html
@@ -131,7 +131,7 @@
     <span>London Square Woolwich, Woolwich New Road, London, SE18 6ED</span>
   </div>
  
-<a class="interest-btn" href="london-woolwich.html#interest-form">REGISTER YOUR INTEREST TODAY</a>
+<a class="interest-btn" href="manchester-crown.html#interest">REGISTER YOUR INTEREST TODAY</a>
   
 </div>
 
@@ -244,7 +244,7 @@ please complete the form, and a member of our team will contact you to assist yo
 </a></h3>
 </div>
 
- <form id="interest-form" action="https://formspree.io/f/xjkrlwqa" method="POST" novalidate target="_blank">
+<form id="interest-form" action="https://formspree.io/f/xjkrlwqa" method="POST" novalidate target="_blank">
     <h2>Interest Form</h2>
 
     <fieldset>
@@ -290,7 +290,7 @@ please complete the form, and a member of our team will contact you to assist yo
     <!-- Toggle Button for Investment Preferences -->
    <button type="button" id="toggle-investment-btn" aria-expanded="false" aria-controls="collapsible-section">
   <span class="toggle-text">Show More</span>
- &#9660
+ <div class="toggle-arrow">&#9660</div>
 </button>
 
     <!-- Collapsible wrapper for Investment Preferences and below -->
@@ -341,7 +341,7 @@ please complete the form, and a member of our team will contact you to assist yo
         </div>
 
         <div class="form-group">
-          <label for="time">Preferred Time</label>
+          <label for="time">Preferred Time (with time zone)</label>
           <input type="text" name="consultation_time" id="time" required />
         </div>
 
